fix: fix item alignment in nested layout section blocks

--- a/automad/src/client/admin/styles/components/editor/blocks/layout-section.less
+++ b/automad/src/client/admin/styles/components/editor/blocks/layout-section.less
@@ -211,22 +211,27 @@
 			}
 
 			&--align-normal > .codex-editor > .codex-editor__redactor {
+				align-content: normal;
 				align-items: normal;
 			}
 
 			&--align-stretch > .codex-editor > .codex-editor__redactor {
+				align-content: stretch;
 				align-items: stretch;
 			}
 
 			&--align-center > .codex-editor > .codex-editor__redactor {
+				align-content: center;
 				align-items: center;
 			}
 
 			&--align-start > .codex-editor > .codex-editor__redactor {
+				align-content: start;
 				align-items: start;
 			}
 
 			&--align-end > .codex-editor > .codex-editor__redactor {
+				align-content: end;
 				align-items: end;
 			}
 
