--- a/automad/src/client/blocks/styles/flex.less
+++ b/automad/src/client/blocks/styles/flex.less
@@ -104,10 +104,12 @@ am-flex {
 	}
 
 	.am-align-normal > & {
+		align-content: normal;
 		align-items: normal;
 	}
 
 	.am-align-stretch > & {
+		align-content: stretch;
 		align-items: stretch;
 
 		& > * > * {
@@ -116,14 +118,17 @@ am-flex {
 	}
 
 	.am-align-center > & {
+		align-content: center;
 		align-items: center;
 	}
 
 	.am-align-start > & {
+		align-content: start;
 		align-items: start;
 	}
 
 	.am-align-end > & {
+		align-content: end;
 		align-items: end;
 	}
 }
